--- a/register.html
+++ b/register.html
@@ -3,45 +3,88 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign Up</title>
-    <style>
-      fieldset {
-        margin: 0 auto;
-        text-align: center;
-        padding: 20px;
-      }
-
-      button[type="submit"] {
-        margin-top: 10px;
-      }
-    </style>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>register form</title>
+    <link rel="stylesheet" href="/css_register.css" />
   </head>
   <body>
-    <form>
-      <fieldset>
-        <legend>Personal Details:</legend>
-        <label>First Name:</label><br />
-        <input type="text" /><br />
-        <label>Last Name:</label><br />
-        <input type="text" /><br />
-        <label>Email Address:</label><br />
-        <input type="text" placeholder="someone@gmail.com" /><br />
-        <label>Password :</label><br />
-        <input type="password" /><br />
-        <label>Conformation Password:</label><br />
-        <input type="password" /><br />
-        <label>Phone Number:</label><br />
-        <input type="number" placeholder="10-digit" /><br />
-        <label>Date of Birth:</label><br />
-        <input type="text" placeholder="dd-mm-yyyy" /><br />
-        <input type="checkbox" />I have read and agree to the Radisson Rewards
-        <a href="/terms&condition.html">terms-and-conditions</a>.<br />
-        <input type="checkbox" />I have read and agree that my personal data
-        will be processed by Radisson Hotel Group in accordance with the
-        <a href="/privacypolicy.html">privacy policy</a>.<br />
+    <div class="main">
+      <div class="container">
+        <div class="signup-content">
+          <div class="signup-img">
+            <img src="/images/signup-img.jpg" alt="" />
+          </div>
+          <div class="signup-form">
+            <form method="POST" class="register-form" id="register-form">
+              <h2>Personal Details :</h2>
+              <div class="form-row">
+                <div class="form-group">
+                  <label for="first_name">First Name :</label>
+                  <input type="text" name="name" id="name" required />
+                </div>
+                <div class="form-group">
+                  <label for="Last_name">Last Name :</label>
+                  <input type="text" name="Last_name" id="Last_name" required />
+                </div>
+              </div>
+              <div class="form-radio">
+                <label for="gender" class="radio-label">Gender :</label>
+                <div class="form-radio-item">
+                  <input type="radio" name="gender" id="male" checked />
+                  <label for="male">Male</label>
+                  <span class="check"></span>
+                </div>
+                <div class="form-radio-item">
+                  <input type="radio" name="gender" id="female" />
+                  <label for="female">Female</label>
+                  <span class="check"></span>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="birth_date">DOB :</label>
+                <input type="text" name="birth_date" id="birth_date" />
+              </div>
+              <div class="form-group">
+                <label for="address">Address :</label>
+                <input type="text" name="address" id="address" required />
+              </div>
+              <div class="form-group">
+                <label for="pincode">Pincode :</label>
+                <input type="text" name="pincode" id="pincode" />
+              </div>
 
-        <button type="submit">Submit</button>
-      </fieldset>
-    </form>
+              <div class="form-group">
+                <label for="email">Email ID :</label>
+                <input type="email" name="email" id="email" />
+              </div>
+              <div class="form-group">
+                <label for="email">Password :</label>
+                <input type="password" name="email" id="email" />
+              </div>
+              <div class="form-group">
+                <label for="email">Confirm Password :</label>
+                <input type="password" name="email" id="email" />
+              </div>
+              <div class="form-submit">
+                <input
+                  type="submit"
+                  value="Reset All"
+                  class="submit"
+                  name="reset"
+                  id="reset"
+                />
+                <input
+                  type="submit"
+                  value="Submit"
+                  class="submit"
+                  name="submit"
+                  id="submit"
+                />
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
