--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
       </div>
     </div>
     <!--video with txt in video end-->
+    <!--fotter start-->
+    <footer style="background-color: #333">
+      <p style="color: white; font-size: large">Connet with us</p>
+      <img src="/images/318453442390211.png" width="20%" alt="" />
+    </footer>
+    <!--fotter end-->
   </body>
 </html>
