--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <!-- navigation bar start-->
     <header>
       <div class="topnav">
-        <a href="/login.html" class="loginparent"
-          ><button id="loginbutton">Log in</button></a
-        >
+        <a href="/login.html" class="loginparent"></a>
+        <button id="loginbutton">Log in</button></a>
         <a style="text-decoration: none" id="nav">Contact</a>
         <a style="text-decoration: none" id="nav">About Us</a>
         <a style="text-decoration: none" id="nav">Accommodation</a>
