--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="signup-content">
           <div class="signup-img">
-            <img src="/images/signup-img.jpg" alt="" />
+            <img src="/images/s2.1.jpg" alt="" />
           </div>
           <div class="signup-form">
             <form method="POST" class="register-form" id="register-form">
