--- a/index.html
+++ b/index.html
@@ -6,20 +6,41 @@
     <link rel="icon" type="image/x-icon" href="/images/logo.jpg" />
     <link rel="stylesheet" href="css_index.css" />
     <title>Boundless Ascent Resort</title>
+    <style>
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+      }
+
+      li {
+        float: right;
+      }
+
+      li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+
+      li a:hover:not(.active) {
+        background-color: #4f3dea;
+      }
+    </style>
   </head>
   <body>
     <!-- navigation bar start-->
     <header>
-      <div class="topnav">
-        <a href="/login.html" class="loginparent"></a>
-        <button id="loginbutton">Log in</button></a>
-        <a style="text-decoration: none" id="nav">Contact</a>
-        <a style="text-decoration: none" id="nav">About Us</a>
-        <a style="text-decoration: none" id="nav">Accommodation</a>
-        <a style="text-decoration: none" id="nav">Home</a>
-        <img src="/images/logo.jpg" alt="logo" />
-        <p id="head1">Boundless Ascent Resort</p>
-      </div>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#home">Home</a></li>
+      </ul>
     </header>
     <!-- navigation bar end-->
     <!--videowith txt in video start-->
