--- a/index.html
+++ b/index.html
@@ -6,31 +6,6 @@
     <link rel="icon" type="image/x-icon" href="/images/logo.jpg" />
     <link rel="stylesheet" href="css_index.css" />
     <title>Boundless Ascent Resort</title>
-    <style>
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #333;
-      }
-
-      li {
-        float: right;
-      }
-
-      li a {
-        display: block;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-
-      li a:hover:not(.active) {
-        background-color: #4f3dea;
-      }
-    </style>
   </head>
   <body>
     <!-- navigation bar start-->
@@ -40,6 +15,8 @@
         <li><a href="#contact">Contact</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="#home">Home</a></li>
+
+        <h1 style="font-family: brush script MT">Boundless Ascent Resort</h1>
       </ul>
     </header>
     <!-- navigation bar end-->
