--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
     <!-- navigation bar start-->
     <header>
       <ul>
+        <li>
+          <a href="/login.html" class="loginparent"
+            ><button id="loginbutton">Log in</button></a
+          >
+        </li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="#home">Home</a></li>
-
-        <h1 style="font-family: brush script MT">Boundless Ascent Resort</h1>
+        <h1 style="font-family: brush script MT; color: white">
+          Boundless Ascent Resort
+        </h1>
       </ul>
     </header>
     <!-- navigation bar end-->
