--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
         <li><a href="#contact">Contact</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="#home">Home</a></li>
-        <h1 style="font-family: brush script MT; color: white">
-          Boundless Ascent Resort
-        </h1>
+        <img src="/images/logo.jpg" alt="" width="70px" style="float: left" />
+          <pre style="font-family: brush script MT; color: white; float: left;"><h2> Boundless Ascent Resort</h2></pre>
       </ul>
     </header>
     <!-- navigation bar end-->
