--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
       <source src="/video/head1.1.mp4" type="video/mp4" />
     </video>
     <!--video with txt in video end-->
-
+    <!--conent section start-->
+    <section>
+      <img src="/images/" alt="">
+    </section>
+    <!--conent section end-->
     <!--fotter start-->
     <footer style="background-color: #333">
       <p style="color: white; font-size: large">Connet with us</p>
-      <img src="/images/318453442390211.png" width="20%" alt="" />
+      <img src="/images/logo-facebook,insta,twitter,youtube.pngs" width="20%" alt="" />
     </footer>
     <!--fotter end-->
   </body>
