--- a/index.html
+++ b/index.html
@@ -32,14 +32,17 @@
     <!--video with txt in video end-->
     <!--conent section start-->
     <section>
-      <img src="/images/" alt="">
+      <img src="/images/beach.jpg" alt="" width="50%">
+      <img src="/images/beach2.jpg" alt="" width="60%" style="float: right;">
     </section>
     <!--conent section end-->
     <!--fotter start-->
-    <footer style="background-color: #333">
-      <p style="color: white; font-size: large">Connet with us</p>
-      <img src="/images/logo-facebook,insta,twitter,youtube.pngs" width="20%" alt="" />
-    </footer>
+    
+      <!-- <footer style="background-color: #333">
+        <p style="color: white; font-size: large">Connet with us</p>
+        <img src="/images/logo-facebook,insta,twitter,youtube.png" width="20%" alt="" />
+      </footer> -->
+    
     <!--fotter end-->
   </body>
 </html>
