--- a/index.html
+++ b/index.html
@@ -32,8 +32,25 @@
     <!--video with txt in video end-->
     <!--conent section start-->
     <section>
-      <img src="/images/beach.jpg" alt="" width="50%">
-      <img src="/images/beach2.jpg" alt="" width="60%" style="float: right;">
+      <div class="container">
+        <div class="image">
+          <img src="/images/beach.jpg" alt="" width="50%">
+        </div>
+        <div class="text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat sequi soluta saepe optio mollitia? Iure qui, laboriosam doloribus tempora id minus sed harum mollitia soluta, enim tempore nemo eius quos!
+        </div>
+      </div>
+      <div class="container">
+        <div class="image">
+          <img src="/images/beach2.jpg" alt="" width="60%" style="float: right;">
+        </div>
+        <div class="text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat sequi soluta saepe optio mollitia? Iure qui,
+          laboriosam doloribus tempora id minus sed harum mollitia soluta, enim tempore nemo eius quos!
+        </div>
+      </div>
+      
+      
     </section>
     <!--conent section end-->
     <!--fotter start-->
