added images in homepage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Marcellus' rel='stylesheet'>
     <title>Boundless Ascent Resort</title>
   </head>
-  <body>
+  <body width="100%">
       <div class="topnav" width="100%">
         <!--videowith txt in video start-->
         <video class="video" width="100%" play loop muted plays-inline>
@@ -19,7 +19,7 @@
         <nav class="nav">
           <div class="name">
             <img src="./images/logo.jpg" class="logo" alt="logo" />
-            <p id="head1">Boundless Ascent Resort</p>
+            <p id="head">Boundless Ascent Resort</p>
           </div>
           <ul>
             <li><a style="text-decoration: none" id="nav1">Home</a></li>
@@ -36,29 +36,90 @@
     
     <!-- navigation bar end-->
   
-    <!-- conent section start
-    <section>
+    <!-- conent section start-->
+    <section >
+
       <div class="container">
-        <div class="image">
-          <img src="./images/beach.jpg" alt="img1" width="50%">
+        <div class ="image1">
+          <img src="./images/beach.jpg" alt="image1" >
         </div>
-        <div class="text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat sequi soluta saepe optio mollitia? Iure qui, laboriosam doloribus tempora id minus sed harum mollitia soluta, enim tempore nemo eius quos!
+        <div class="text-image">
+          <h2 class="head1">
+            WHERE LUXURY UNFOLDS<br> AT EVERY TURN
+          </h2>
+          <div>
+            <p>Discover Boundless Ascent Resort, a landmark destination in the heart of Banglore’s vibrant city district. Envisioned by renowned architect Moshe Safdie, the striking aesthetic defiantly blurs the line between art and architecture.</p>
+            <p>Experience unparalleled luxury matched by exceptional service, in a land where every detail whispers indulgence. An exhilarating oasis of tranquility and thrill.</p>
+            <p>down on the glittering expanse of the city from the world-famous Infinity Pool and immerse yourself in a world of infinite possibilities — all in one extraordinary destination. There is nowhere else on earth quite like this.</p>
+          </div>
         </div>
       </div>
+
       <div class="container">
-        <div class="image">
-          <img src="./images/beach2.jpg" alt="img2" width="60%" style="float: right;">
+        <div class="head2">
+            <h1>UNVEILING OUR NEW ROOMS & SUITES</h1>
         </div>
-        <div class="text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat sequi soluta saepe optio mollitia? Iure qui,
-          laboriosam doloribus tempora id minus sed harum mollitia soluta, enim tempore nemo eius quos!
+        <div class="image2">
+          <img src="./images/bathroom.avif" alt="img">
         </div>
       </div>
+
+      <div  class="revcontainer">
+        <div class="text3">
+          <p>Intuitively designed to comfort, soothe, delight and excite, our newly restored rooms and suites are a haven of calm amidst the bustling city.</p>
+          <p>Wake up to spectacular views. Swim in the world’s largest rooftop infinity pool. Feel entirely at home, knowing that everything you need ― and want ― is right at your doorstep.</p>
+        </div>
+        <div class="image3">
+          <img src="./images/view.avif" alt="window">
+        </div>
+      </div>
+
+      <div class="container">
+        <div class ="image4">
+          <img src="./images/s4.1.jpg" alt="image4" >
+        </div>
+        <div class="text-image">
+          <h2 class="head4">
+            AN ATLAS OF FLAVOUR
+          </h2>
+          <div>
+            <p>Embark on an epicurean voyage through an endless variety of cuisines, crafted with the finest ingredients and executed with passion. Let our unique and exquisite creations by celebrated chefs at award-winning restaurants take your taste buds on an exceptional culinary journey.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="image5">
+          <img src="./images/s3.jpg" alt="img5" >
+        </div>
+        <div class="text-image">
+            <h2 class="head5">
+              UNIQUE EXPERIENCES
+            </h2>
+          <div class="left">
+            <p>Wander through immersive exhibitions. Find world-class theatre shows and concerts. Discover hidden gems while floating away on a traditional Sampan boat. Plus, our year-round calendar of thematic festivals and extraordinary cultural programme of artists, musicians and designers make <span>Boundless Ascent Resort</span> a haven of inspiration and exploration.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="containerelev">
+        <div class="image6">
+          <img src="./images/img6.avif" alt="bar">
+        </div>
+        <div class="image7">
+          <img src="./images/img7.avif" alt="nightlife">
+        </div>
+        <div class="text">
+          <h2 class="head6">FROM DUSK <br>TO DAWN</h2>
+          <p>At Boundless Ascent Resort, the night is ever young. Sip handcrafted cocktails by expert mixologists at alfresco rooftop bars perched 57 storeys aboveground. Flaunt your moves at Singapore’s largest nightclub, where internationally renowned DJs helm the decks, spinning high-energy sets to keep the party raving till the sun rises.</p>
+        </div>
+
+      </div>
+
     </section>
-    <!--conent section end
-    <!--fotter start
-    <footer style="background-color: #333">
+    <!--conent section end-->
+    <!--fotter start-->
+    <!-- <footer style="background-color: #333">
       <p style="color: white; font-size: large">Connet with us</p>
       <img src="./images/logo-facebook,insta,twitter,youtube.png" width="20%" alt="connect with us" />
     </footer>  -->
